--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <div id="Tab1" class="tabcontent">
         <h2>Home</h2>
-        <p>Shepherd Ventures III  mission is to generate low-risk returns with growth stage investments. Our extensive stress testing of founders eliminates weak teams BEFORE investing! Focusing on the founders reduces failures and greatly increases success. Investors realize lower risk portfolios with trusted returns. We invest in AI/Tech, Life Science, Health Tech & Fin Tech companies.
+        <p>Shepherd Ventures III  mission is to generate low-risk returns with growth stage investments. Our extensive stress testing of founders eliminates weak teams BEFORE investing! Focusing on the founders reduces failures and greatly increases success. The Fund realizes lower risk portfolios with trusted returns. We invest in AI/Tech, Life Science, Health Tech & Fin Tech companies.
             Attractive investments must have driven trustworthy founders, with WOW value propositions and extraordinary upside potential.
         </p>
         <p>Our Managing Directors are seasoned venture capitalists, angel investors and  entrepreneurs with many successes. We add value with hands-on shepherding, by providing extensive operating experience, advisory networks and strategic partnerships that drive high-return exits.
@@ -61,7 +61,7 @@
 
             <h3>Stress Testing Eliminates Losers Before Investing</h3>
             <p>Long Term Stress Testing Triples Success Rate* (or more)</p>
-            <p>Investors do <span>Not</span> Have to Pay for a Lot of Losers</p>
+            <p>We do <span>Not</span> Have to Pay for a Lot of Losers</p>
             <p>Result: Risk-reduced Portfolio with Trusted Returns</p>
 
             <h3>VC Access with Trusted Returns!</h3>
@@ -94,7 +94,7 @@
                 <div class = "info">
                     <p>George@SV3.vc</p>
                     <p>(619) 742-8228</p>
-                    <a href="linkedin.com/in/george-kenney">LinkedIn</a>
+                    <a href="https://linkedin.com/in/george-kenney">LinkedIn</a>
                 </div>
             </div>
             <div class="person">
@@ -117,7 +117,7 @@
                 <div class = "info">
                     <p>Rob@SV3.vc</p>
                     <p>(760) 607-7655</p>
-                    <a href="linkedin.com/in/robertstevenkramarz/">LinkedIn</a>
+                    <a href="https://linkedin.com/in/robertstevenkramarz/">LinkedIn</a>
                 </div>
             </div>
         </div>
@@ -139,28 +139,28 @@
                     <h2 style="color: #0874c4">Endourage</h2>
                     <ul>
                         <li>Clinically Proven Therapeutic for Long Covid</li>
-                        <li>More</li>
+                        <li>3 Minute Teaser</li>
                     </ul>
                 </div>
                 <div class="grid-item">
                     <h2 style="color: #08b444">Maggie's Breath</h2>
                     <ul>
                         <li>Painless Breath-Screening Detects Breast Cancer</li>
-                        <li>More</li>
+                        <li>3 Minute Teaser</li>
                     </ul>
                 </div>
                 <div class="grid-item" style="background: white">
                     <img src="sm.png" alt="SeeMedX Logo" id="sm" style="margin-bottom: 20px;">
                     <ul>
                         <li>Early Warning System Prevents Heart Failure Death</li>
-                        <li>More</li>
+                        <li>3 Minute Teaser</li>
                     </ul>
                 </div>
                 <div class="grid-item" style="background: #f4fcfc">
                     <img src="bs.png" alt="Black Swan Research Logo" id="bs" style="margin-bottom: 10px;">
                     <ul>
                         <li>Black Swan Flu Shot Protects Stock Portfolios</li>
-                        <li>More</li>
+                        <li>3 Minute Teaser</li>
                     </ul>
                 </div>
             </div>
@@ -214,14 +214,14 @@
     </div>
 
     <div id="Tab7" class="tabcontent">
-        <h3>Risk Survey</h3>
-        <p>This is Risk Survey content.</p>
+        <h2>Risk Survey</h2>
+        <a href="http://shepherdventures.com/risk-survey/questions.php">Survey Link</a>
     </div>
 
     <script src="script.js"></script>
 
     <footer class="site-footer">
-        <p>Confidential &copy; 2024 Shepherd Ventures</p>
+        <p>Confidential &copy; 2025 Shepherd Ventures III</p>
         <p>5590 Meadows Del Mar</p>
         <p>San Diego, CA 92130</p>
         <p>Telephone:  619 742-8228</p>
