--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 
     <div id="Tab5" class="tabcontent">
         <h3>About us</h3>
-        <p>This is About us content.</p>
+        <p>TBD</p>
     </div>
 
     <div id="Tab6" class="tabcontent">
