--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <button class="tablinks" onclick="openTab(event, 'Tab2')">Investment Strategy</button>
         <button class="tablinks" onclick="openTab(event, 'Tab3')">Our Team</button>
         <button class="tablinks" onclick="openTab(event, 'Tab4')">Portfolio</button>
-        <button class="tablinks" onclick="openTab(event, 'Tab5')">About Us</button>
+        <button class="tablinks" onclick="openTab(event, 'Tab5')">Advisors</button>
         <button class="tablinks" onclick="openTab(event, 'Tab6')">Contact Us</button>
         <button class="tablinks" onclick="openTab(event, 'Tab7')">Risk Survey</button>
     </div>
@@ -170,7 +170,7 @@
     </div>
 
     <div id="Tab5" class="tabcontent">
-        <h2>About us</h2>
+        <h2>Advisors</h2>
         <p>TBD</p>
     </div>
 
